<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/normal_margin" >

    <RadioGroup
        android:id="@+id/rg_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_continueLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/location_contiue" />

        <RadioButton
            android:id="@+id/rb_onceLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_once" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin" >

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interval" />

        <EditText
            android:id="@+id/et_interval"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_middle"
            android:ems="10"
            android:hint="@string/defaultInteval"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_middle"
            android:text="@string/millsecond" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/cb_needAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/needAddress" />
        <CheckBox
            android:id="@+id/cb_cacheAble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cacheAble" />
        <CheckBox
            android:id="@+id/cb_gpsFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpsFirst"
            />
        <LinearLayout
            android:id="@+id/layout_onceLastest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:visibility="gone"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_onceLastest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onceLastest" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_middle"
                android:text="@string/onceLastestDetail" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/bt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startLocation" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin" />
    </ScrollView>

</LinearLayout>